# app/api/user.go
@@ -1,9 +1,14 @@
 package api
 
 import (
+	"gin_api_server_template/app"
 	userReq "gin_api_server_template/app/request/user"
 	"gin_api_server_template/app/response"
 	"gin_api_server_template/app/response/user"
+
+	_struct "gin_api_server_template/app/struct"
+	_const "gin_api_server_template/internal/const"
+	"gin_api_server_template/internal/global"
 
 	"github.com/gin-gonic/gin"
 )
@@ -27,4 +32,41 @@ func (u *userApi) Login(c *gin.Context) {
 		return
 	}
 	response.Success(c, &user.UserLoginResp{})
+}
+
+// 获取登录用户
+// @Summary 获取登录用户
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param GetUserInfo body user.GetUserInfoReq true "获取登录用户"
+// @Param request_id header string true "请求ID"
+// @Success 200 {object} user.GetUserInfoResp "成功"
+// @Router /user/info [post]
+func (u *userApi) GetUserInfo(c *gin.Context) {
+	// 获取用户 token
+	userToken, ok := c.Get(_const.CtxUserTokenKey)
+	if !ok {
+		response.Unauthorized(c)
+		return
+	}
+	var userTokenS *_struct.UserToken
+	if userTokenS, ok = userToken.(*_struct.UserToken); !ok {
+		response.Unauthorized(c)
+		return
+	}
+	userInfo, err := app.GA.UserInfoRepo.GetBySysId(c, userTokenS.UserSysId)
+	if err != nil {
+		global.Logger.Errorf("get user info err: %v", err)
+		response.InternalErr(c)
+		return
+	}
+	response.Success(c, &user.GetUserInfoResp{
+		Avatar:       userInfo.Avatar,
+		Birthday:     userInfo.Birthday,
+		Introduction: userInfo.Introduction,
+		NickName:     userInfo.NickName,
+		Sex:          userInfo.Sex,
+		UserSysId:    userInfo.SysId,
+	})
 }
